--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>mahmoud</h1>
-					<p>secutriy, business-sami HTML5/CSS3 template<br />
+					<p>add, business-sami HTML5/CSS3 template<br />
 					built by <a href="https://templated.co/">Templated</a> and released under the <a href="https://templated.co/license">Creative Commons</a>.</p>
 					<a href="#one" class="button special scrolly">Get Started</a>
 				</div>
